# knmi-alerts-bot

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ACE_WORKFLOW.md  ACE_WORKFLOW_INTEGRATION.md  ACE_WORKFLOW_QUICK_REFERENCE.md  AGENTS.md  ARCHITECTURE.md  LICENSE  Makefile  PRODUCT.md  README.md  docker-compose.yaml  download_files.py  main.py  mise.toml  poc.py  prek.toml  pyproject.toml  report_example.xml  ruff.toml  subscriber.py  test_file.xml
.github/workflows/: ci.yaml
.opencode/commands/: implement.md  plan.md  research.md
docs/plans/: 2026-03-20-replace-mypy-with-ty.md
docs/research/: 2026-03-20-replace-mypy-with-ty.md
knmi_bot/: Dockerfile  bot.py  requirements.txt  users.py
notifier/: Dockerfile  alerts.py  notifier.py  requirements.txt
report_checker/: Dockerfile  app.py  knmi_alerts.py  requirements.txt
report_checker/reports/: knmi_waarschuwingen_202412291102.xml
reports/: knmi_waarschuwingen_202412290909.xml
schema/: init.sql
