[tool.poetry]
name = "knmialerts"
version = "0.1.0"
description = ""
authors = ["None"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
paho-mqtt = "^2.1.0"
loguru = "^0.7.3"
python-dotenv = "^1.0.1"
xmltodict = "^0.14.2"
get-docker-secret = "^2.0.0"


[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
ipython = "^8.31.0"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
