[project]
name = "knmialerts"
version = "1.0.0"
description = ""
authors = [{ name = "None" }]
requires-python = ">=3.12,<4"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "requests>=2.32.3,<3",
    "paho-mqtt>=2.1.0,<3",
    "loguru>=0.7.3,<0.8",
    "python-dotenv>=1.0.1,<2",
    "xmltodict>=0.14.2,<0.15",
    "get-docker-secret>=2.0.0,<3",
]

[dependency-groups]
dev = [
    "icecream>=2.1.3,<3",
    "ipython>=8.31.0,<9",
    "ruff>=0.15.7",
    "ty",
]

[tool.uv]
package = false
default-groups = "all"

# [build-system]
# requires = ["uv_build>=0.10.11,<0.11.0"]
# build-backend = "uv_build"
